apps/base/auth-lemonldap/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth-lemonldap
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
