apps/base/auth-lemonldap/deploy/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lemonldap
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lemonldap
      app.kubernetes.io/component: lemonldap
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lemonldap
        app.kubernetes.io/component: lemonldap
    spec:
      containers:
      - name: lemonldap
        image: "registry.lan/lemonldap-ng:2.23.4-custom"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
        - containerPort: 9000
          name: fastcgi
        securityContext:
          # lemnldap requires root and a writable root filesystem
          runAsNonRoot: false
          readOnlyRootFilesystem: false
          allowPrivilegeEscalation: true
          seccompProfile:
            type: RuntimeDefault
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: http
            httpHeaders:
            # Use portal hostname to avoid spamming manager-api errors
            - name: Host
              value: "lemonldap.auth.web_domain_name"
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: "50m"
            memory: "384Mi"
          limits:
            cpu: "150m"
            memory: "384Mi"
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: lemonldap-data
          mountPath: /var/lib/lemonldap-ng-pv
        - name: lmconf-volume
          mountPath: /var/lib/lemonldap-ng/conf/lmConf-2.json
          subPath: lmConf.json
        - name: cluster-ca-volume
          mountPath: /var/lib/lemonldap-ng/server-certs/ca.crt
          subPath: ca.crt
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: lemonldap-data
        persistentVolumeClaim:
          claimName: lemonldap-data
      - name: lmconf-volume
        secret:
          secretName: lemonldap-lmconf
      - name: cluster-ca-volume
        secret:
          secretName: cluster-ca
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
