apps/base/auth-lemonldap/deploy/service-handler.yaml
apiVersion: v1
kind: Service
metadata:
  name: lemonldap-handler
spec:
  type: LoadBalancer
  loadBalancerIP: 1.2.3.4
  externalTrafficPolicy: Local
  ports:
    - port: 9000
      targetPort: 9000
      name: fastcgi
  selector:
    app.kubernetes.io/component: lemonldap
    app.kubernetes.io/name: lemonldap
