apps/base/auth-lemonldap/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lemonldap
spec:
  ports:
  - port: 80
    name: http
  selector:
    app.kubernetes.io/component: lemonldap
    app.kubernetes.io/name: lemonldap
